--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  carousel_slider: ^5.0.0
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -60,7 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - img/ads.jpg
+  - img/banners/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
