--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.3.2
   cloud_firestore: ^5.4.5
   intl: ^0.19.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
