--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.4.5
   intl: ^0.19.0
   pin_code_fields: ^8.0.1
+  simple_numpad: ^1.0.5
 
 dev_dependencies:
   flutter_test:
