--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.19.0
   pin_code_fields: ^8.0.1
   simple_numpad: ^1.0.5
+  image_picker: ^0.8.7+3
 
 dev_dependencies:
   flutter_test:
