--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,7 @@ android {
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         // minSdk = flutter.minSdkVersion
         minSdkVersion 23
+        ndkVersion = "25.1.8937393"
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
