--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,16 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
+flutter_native_splash:
+  color: "#1A87DD"
+  image: "img/T-Cash_Logo.png"
+
+  android_12:
+    image: img/T-Cash_Logo.png
+
+  web: false
+
 dependencies:
   flutter:
     sdk: flutter
@@ -43,6 +53,7 @@ dependencies:
   simple_numpad: ^1.0.5
   image_picker: ^0.8.7+3
   fl_chart: ^0.69.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -53,8 +64,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  carousel_slider: ^5.0.0
   flutter_lints: ^4.0.0
+  flutter_native_splash: ^2.4.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
