--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   image_picker: ^0.8.7+3
   fl_chart: ^0.69.0
   carousel_slider: ^5.0.0
+  mobile_scanner: ^3.1.0
+  pretty_qr_code: ^3.3.0
 
 dev_dependencies:
   flutter_test:
