--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   carousel_slider: ^5.0.0
   mobile_scanner: ^3.1.0
   pretty_qr_code: ^3.3.0
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
