--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   mobile_scanner: ^3.1.0
   pretty_qr_code: ^3.3.0
   camera: ^0.11.0+2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
